adding working file

--- a/transfer_code_v3_WORKING.ipynb
+++ b/transfer_code_v3_WORKING.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "325b8a9c-848d-41f6-bfba-96b812e15768",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,21 @@
       "Done with figures, creating reconstructions\n",
       "Modenum = 19\n",
       "Done with figures, creating reconstructions\n",
-      "Modenum = 20\n",
+      "Modenum = 20\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_22252/2645134982.py:341: RuntimeWarning: More than 20 figures have been opened. Figures created through the pyplot interface (`matplotlib.pyplot.figure`) are retained until explicitly closed and may consume too much memory. (To control this warning, see the rcParam `figure.max_open_warning`).\n",
+      "  plt.figure(figsize=(10,7)) #Define Figure\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "Done with figures, creating reconstructions\n",
       "Modenum = 21\n",
       "Done with figures, creating reconstructions\n",
@@ -545,7 +559,7 @@
     "    #Subtract the era5 anomalies from gefsanomalies according to lead \n",
     "    erroranoms=np.zeros((era5data.shape[0],gefs_data.shape[1], gefs_data.shape[2]))\n",
     "    #for lead in np.arange(nleads): #Fill the array\n",
-    "    erroranoms[Iinc,:,:] = (((gefsanoms[Iinc,:,:]-era5anoms[Iinc+lead,:,:]))) #replace with nleads?\n",
+    "    erroranoms[Iinc,:,:] = (((gefsanoms[Iinc,:,:]-era5anoms[Iinc+lead,:,:])))\n",
     "    print('Total Error Anomalies Created. Beginning Spatial Eigenvector Calculations')\n",
     "\n",
     "    #Dispose of unnecessary arrays to save memory\n",
@@ -755,60 +769,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "id": "328e0856-cf2a-423d-8764-b18180fcdb9d",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(154, 15931, 16)"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "error_reconll.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "id": "ab2c176f-0690-44c8-ad6e-dc868a139c25",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(154, 15931, 16)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "error_recon.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "96422a7c-1745-4ecf-8381-98bb8278ef1a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "error_reconll = np.zeros((error_recon.shape[0],gefs_data.shape[1],gefs_data.shape[2],nleads)) #Define spatial reconstructions in latitude and longitude format\n",
-    "for y in np.arange(latitude): #Convert spatial reconstructions into latitude and longitude format\n",
-    "    error_reconll[:,y,:,:] = error_recon[:,y*longitude:(y+1)*longitude,:]"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 34,
    "id": "04d4a3b6-7b47-4c91-99f6-96c40448da27",
    "metadata": {},
@@ -953,31 +913,6 @@
     "\n",
     "#plt.savefig('/free2/sm957448/will_files/200mb_Z/transfer_code/plots/plots.png')\n",
     "print(np.sum(gefs_data)/ngrids)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "a4a99144-0e48-45d4-818a-a6112205359d",
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "IndexError",
-     "evalue": "index 16 is out of bounds for axis 2 with size 16",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [6]\u001b[0m, in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m error_reconll \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39mzeros((error_recon\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m0\u001b[39m],gefs_data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m1\u001b[39m]\u001b[38;5;241m*\u001b[39mgefs_data\u001b[38;5;241m.\u001b[39mshape[\u001b[38;5;241m2\u001b[39m],nleads)) \u001b[38;5;66;03m#Define spatial reconstructions in latitude and longitude format\u001b[39;00m\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m y \u001b[38;5;129;01min\u001b[39;00m np\u001b[38;5;241m.\u001b[39marange(latitude): \u001b[38;5;66;03m#Convert spatial reconstructions into latitude and longitude format\u001b[39;00m\n\u001b[0;32m----> 3\u001b[0m     error_reconll[:,y,:,nleads] \u001b[38;5;241m=\u001b[39m \u001b[43merror_recon\u001b[49m\u001b[43m[\u001b[49m\u001b[43m:\u001b[49m\u001b[43m,\u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mlongitude\u001b[49m\u001b[43m:\u001b[49m\u001b[43m(\u001b[49m\u001b[43my\u001b[49m\u001b[38;5;241;43m+\u001b[39;49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m*\u001b[39;49m\u001b[43mlongitude\u001b[49m\u001b[43m,\u001b[49m\u001b[43mnleads\u001b[49m\u001b[43m]\u001b[49m\n\u001b[1;32m      4\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mReconstruction for month \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;241m+\u001b[39m\u001b[38;5;28mstr\u001b[39m(monthi)\u001b[38;5;241m+\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m complete. Saving reconstruction\u001b[39m\u001b[38;5;124m'\u001b[39m)\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 16 is out of bounds for axis 2 with size 16"
-     ]
-    }
-   ],
-   "source": [
-    "error_reconll = np.zeros((error_recon.shape[0],gefs_data.shape[1]*gefs_data.shape[2],nleads)) #Define spatial reconstructions in latitude and longitude format\n",
-    "for y in np.arange(latitude): #Convert spatial reconstructions into latitude and longitude format\n",
-    "    error_reconll[:,y,:,nleads] = error_recon[:,y*longitude:(y+1)*longitude,nleads]\n",
-    "print('Reconstruction for month '+str(monthi)+' complete. Saving reconstruction')"
    ]
   }
  ],
